<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="122dp"
        android:layout_marginTop="304dp"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcomeLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/welcomeLoginButton"
        android:layout_width="109dp"
        android:layout_height="59dp"
        android:layout_marginBottom="176dp"

        android:text="@string/Login_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="171dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/todoOne" />
</androidx.constraintlayout.widget.ConstraintLayout>