<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageScreen">

    <EditText
        android:id="@+id/smsText"
        android:layout_width="307dp"
        android:layout_height="52dp"

        android:layout_marginEnd="4dp"
        android:layout_marginBottom="21dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/smstext"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/SmsButton"
        app:layout_constraintEnd_toEndOf="@+id/SmsButton"
        app:layout_constraintTop_toBottomOf="@+id/AddPhoneNumberText"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/AddPhoneNumberText"
        android:layout_width="127dp"
        android:layout_height="34dp"
        android:layout_marginBottom="24dp"
        android:text="@string/phone_number_text"
        app:layout_constraintBottom_toTopOf="@+id/smsText"
        app:layout_constraintEnd_toEndOf="@+id/smsText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextField" />

    <Button
        android:id="@+id/SmsButton"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="125dp"
        android:text="@string/sms_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smsText" />

    <EditText
        android:id="@+id/phoneNumberTextField"
        android:layout_width="317dp"
        android:layout_height="55dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="39dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/AddPhoneNumberText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="156dp"
        android:layout_height="184dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/sym_action_call"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>